--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
       </div>
     </div>
     <div id="info" style="font-size:12pt;color:#ffffff;"></div>
+    <script src="pose.js"></script>
   </body>
 </html>
