--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
  </head>
 
   <body>
-    <div style="width:100%;position:fixed;text-align:center;color:#ffffff;">
+    <div id="loading" style='position: relative; left: 0'>
+        <div id="spinner-text">Loading PoseNet model... </div>
+        <div id="sk-spinner-pulse"></div>
+    </div>
+
+    <div id="main" style="display:none;z-index:99999999;">
+      <div style="width:100%;position:fixed;text-align:center;color:#ffffff;">
         <p>保证摄像头处于未禁用状态，正对摄像头站立，保证左上角摄像头窗口可看见你的上半身，挥舞手臂，划掉New Game。</p>
         <p>挥舞你的手！挥舞你的手！挥舞你的手！</p>
-    </div>
-    <div id="extra"></div>
-    <canvas id="view" width="640" height="480"></canvas>
-    <div id="desc">
+      </div>
+      <div id="extra"></div>
+      <canvas id="view" width="640" height="480"></canvas>
+      <div id="desc">
         <div id="browser"></div>
-    </div>
-    <div id="posenet" style="">
-      <!-- <div id="loading"></div> -->
-      
-      <div id="main" style="display:none;z-index:99999999;">
+      </div>
+      <div id="posenet" style="">
         <div style="width:160px; padding:4px; background-color: #ffffff;">
-          <form>
-            <label><input type="radio" name="hand" value="left"/>左手</label>
-            <label><input type="radio" name="hand" value="right" checked="checked"/>右手</label>
-          </form>
           <div style="position: relative;">
             <video id="video" playsinline style=" -moz-transform: scaleX(-1);
                 -o-transform: scaleX(-1);
@@ -40,8 +39,8 @@
         </div>
         <canvas id="output"/>
       </div>
+      <div id="info" style="font-size:12pt;color:#ffffff;"></div>
     </div>
-    <div id="info" style="font-size:12pt;color:#ffffff;"></div>
-    <script src="pose.js"></script>
   </body>
+  <script src="pose.js"></script>
 </html>
